first version ready

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 </div>
 <div class="messages">
 
-<p>example paragraph</p>
+<p>Lives: <span id="span-lives"></span></p>
+<p>Time: <span id="span-time"></span></p>
+<p>Score: <span id="span-score"></span></p>
+<p> <span id="span-record"></span></p>
 </div>
 </div>
 <script src="./maps.js"></script>
